# INF01047-TrabalhoFinal

./: .clang-format  CMakeLists.txt  Makefile  README.md  hash-entrega.txt  shadered_project.sprj  video.txt
data/: gouraud_shader.frag  gouraud_shader.vert  gouraud_shader_fragment.glsl  phong_shader.frag  phong_shader.vert  startingconfig.txt
data/shaders/: gouraud_shader.frag  gouraud_shader.vert  phong_shader.frag  phong_shader.vert  skybox_shader.vert
include/: interpolator.hpp  main.cpp  matrices.h  matrices.hpp  textrendering.hpp  utils.h
include/engine/: gameObject.hpp  interpolator.hpp  loader.hpp  main.cpp  renderObject.hpp
include/engine/EngineObject/: basis.hpp  engineObject.hpp  gameObject.hpp
include/engine/EngineObject/camera/: camera.hpp  dollyCamera.hpp  freeCamera.hpp
include/engine/Input/: inputHandler.hpp  keyMap.hpp
include/engine/Physics/: RTree.h  collider.hpp  collisions.hpp  physicsManager.hpp  physicsObject.hpp  planet.hpp  player.hpp  ship.hpp  solarSystem.hpp
include/engine/Rendering/: defaultModels.hpp  model3D.hpp  renderer.hpp
include/engine/camera/: camera.hpp
src/: camera.cpp  collider.cpp  collisions.cpp  dollyCamera.cpp  engineObject.cpp  freeCamera.cpp  gameObject.cpp  inputHandler.cpp  interpolator.cpp  keyMap.cpp  loader.cpp  main.cpp  matrices.cpp  model3D.cpp  physicsManager.cpp  physicsObject.cpp  player.cpp  renderObject.cpp  renderer.cpp  shader_fragment.glsl  ship.cpp  solarSystem.cpp  textrendering.cpp
tests/: CMakeLists.txt  test.cpp  test_engine_object.cpp  test_game_object.cpp  test_matrices.cpp
