cmake_minimum_required(VERSION 3.14)
project(my_project)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

include(FetchContent)
FetchContent_Declare(
  googletest
  URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
)
if(WIN32)
    set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
endif()
FetchContent_MakeAvailable(googletest)

enable_testing()
add_executable(
  tests
  test_matrices.cpp
  ../src/camera.cpp
  ../src/engineObject.cpp
  ../src/matrices.cpp
)
target_link_libraries(
  tests
  GTest::gtest_main
  ${PROJECT_SOURCE_DIR}/../include
)
target_include_directories(tests BEFORE PRIVATE ${PROJECT_SOURCE_DIR}/../include)

include(GoogleTest)
gtest_discover_tests(tests)
